# Vanguard

./: .copyright-template  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cspell.config.yaml  pyproject.toml  references.bib  requirements-docs.txt  requirements.txt  setup.py
.cspell/: README.md  acronyms.txt  custom_misc.txt  library_terms.txt  maths_terms.txt  people.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  other.yml
.github/workflows/: check_todos.yml  coverage.yml  docs.yml  pre_commit_autoupdate.yml  pre_commit_checks.yml  release.yml  unittests.yml  unittests_from_requirements.yml  unittests_lowest.yml  uv_lock_autoupdate.yml
docs/: README.md
docs/source/: conf.py  confutils.py  examples.rst  index.rst  refstyle.py
docs/source/_static/: extra.css  gallery.css
docs/source/components/: base-gp-models.rst  kernels.rst
docs/source/controllers/: base-controller.rst  input-uncertainty.rst  vanilla.rst
docs/source/datasets/: air_passengers.rst  base-datasets.rst  bike.rst  synthetic.rst
docs/source/decorators/: classification.rst  decorator-tools.rst  disable-standard-scaling.rst  distributed-gps.rst  hierarchical.rst  higher-rank-features.rst  input-warping.rst  learning-likelihood-noise.rst  multitask.rst  normalising-inputs.rst  variational-inference.rst  warped-gps.rst
docs/source/decorators/warps/: creating-warps.rst  existing-warps.rst
docs/source/optimise/: finder.rst  schedulers.rst  smart_optimiser.rst
examples/: README.md
examples/notebooks/: binary_classification.ipynb  decorator_walkthrough.ipynb  distributed_gp.ipynb  intro_to_gps.ipynb  laplace-hierarchical.ipynb  laplace_hierarchical.ipynb  multiclass_classification.ipynb  multiclass_dirichlet_classification.ipynb  sparse_kernel_approximation.ipynb  sparse_variational_gps.ipynb
pre_commit_hooks/: check_copyright.py  docstring_spaces.py  markdown_cells.py  require_ascii.py  require_utf8.py
tests/: __init__.py  __main__.py  cases.py  conftest.py  test_doctests.py  test_examples.py
tests/coverage/: compare.py
tests/integration/: test_base_usage.py  test_classification_usage.py  test_distribute_usage.py  test_hierarchical_usage.py  test_multitask_usage.py  test_warps_usage.py  util.py
tests/units/: __init__.py  test_base.py  test_decorator_combinations.py  test_decorators.py  test_distributed_hierarchical.py  test_features.py  test_greedy_optimiser.py  test_hierarchical.py  test_higher_rank_features.py  test_kernels.py  test_learning.py  test_learning_rate_finder.py  test_learning_rate_scheduler.py  test_metrics.py  test_models.py  test_multitask.py  test_normalise.py  test_posterior.py  test_posterior_collection.py  test_standardise.py  test_uncertainty.py  test_utils.py  test_variational.py
tests/units/base/: __init__.py  test_base.py  test_metrics.py
tests/units/base/posteriors/: __init__.py  test_collection.py  test_posterior.py
tests/units/classification/: __init__.py  case.py  test_binary.py  test_categorical.py  test_dirichlet.py  test_dirichlet_kernel.py  test_likelihoods.py  test_models.py
tests/units/datasets/: test_air_passengers.py  test_basedataset.py  test_bike.py  test_classification.py  test_synthetic.py
tests/units/decoratorutils/: __init__.py  test_basedecorator.py  test_wrapping.py
tests/units/distribute/: __init__.py  test_aggregators.py  test_decorator.py  test_distributed_hierarchical.py  test_partitioners.py
tests/units/hierarchical/: test_hierarchical.py  test_laplace.py
tests/units/meta/: test_test_extras.py
tests/units/multitask/: __init__.py  test_likelihoods.py  test_multitask.py  test_multitask_kernel.py
tests/units/optimise/: test_greedy_optimiser.py  test_learning_rate_finder.py  test_learning_rate_scheduler.py  test_optimiser_utilities.py  test_smart_optimiser.py
tests/units/variational/: __init__.py  test_decorator.py  test_models.py  test_variational.py
tests/units/warps/: __init__.py  test_cwgp_training.py  test_decorator.py  test_distribution.py  test_warps.py
vanguard/: __init__.py  _bibliography.py  features.py  kernels.py  learning.py  models.py  normalise.py  standardise.py  uncertainty.py  utils.py  vanilla.py  warnings.py
vanguard/base/: __init__.py  basecontroller.py  gpcontroller.py  metaclass.py  metrics.py  standardise.py
vanguard/base/posteriors/: __init__.py  collection.py  posterior.py
vanguard/classification/: __init__.py  binary.py  categorical.py  dirichlet.py  kernel.py  likelihoods.py  mixin.py  models.py
vanguard/datasets/: __init__.py  air_passengers.py  basedataset.py  bike.py  classification.py  synthetic.py
vanguard/datasets/data/: README.md  air_passengers.csv  data_citations.rst
vanguard/decoratorutils/: __init__.py  basedecorator.py  errors.py  wrapping.py
vanguard/distribute/: __init__.py  aggregators.py  decorator.py  partitioners.py
vanguard/hierarchical/: __init__.py  base.py  collection.py  distributions.py  hyperparameter.py  laplace.py  module.py  variational.py
vanguard/multitask/: __init__.py  decorator.py  kernel.py  likelihoods.py  models.py
vanguard/optimise/: __init__.py  finder.py  optimiser.py  schedule.py
vanguard/variational/: __init__.py  decorator.py  models.py
vanguard/warps/: __init__.py  basefunction.py  decorator.py  distribution.py  input.py  intermediate.py  warpfunctions.py
