[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Vanguard"
dynamic = ["version"]
description = "Various easy-to-use extensions for Gaussian process models and a framework for composition of extensions."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "gaussian-process",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]
license = {file = "LICENSE.md"}
authors = [
    {name = "GCHQ", email = "oss@gchq.gov.uk"},
]
dependencies = [
    "bibtexparser",
    "gpytorch>=1.5.1",
    "kmedoids",
    "matplotlib",
    "numpy>=1.20",
    "pandas",
    "scikit-learn",
    "scipy",
    "torch>=1.7.0",
    "typing_extensions",
    "urllib3>=2.2.1",
]

[project.optional-dependencies]
# These match the suffixes on the various requirements-*.txt files
# Run unit tests
test = [
    "pytest",
]
# Compile documentation
doc = [
    "furo",
    "nbformat",
    "nbsphinx",
    "pillow",
    "pybtex",
    "setuptools; python_version>='3.12'",  # TODO: Remove once pybtex releases > 0.24.0
    # https://github.com/gchq/Vanguard/issues/246
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
]
# All tools for a developer including those for running pylint
dev = [
    "vanguard[test, doc]",
    "isort",
    "jupyterlab",
    "pre-commit",
    "pylint",
    "pyright",
    "pyroma",
    "ruff",
]

[project.urls]
#Documentation = "https://example.org/" # TODO
Repository = "https://github.com/gchq/Vanguard"
Issues = "https://github.com/gchq/Vanguard/issues"
#Changelog = "https://github.com/gchq/Vanguard/blob/main/CHANGELOG.md" # TODO

[tool.setuptools]
packages = ["vanguard"]

[tool.setuptools.dynamic]
version = {attr = "vanguard.__version__"}

[tool.setuptools.package-data]
vanguard = ["references.bib"]

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]  # Handle Jupyter Notebook files as well.

[tool.ruff.lint]
extend-select = [
    "D201",  # No blank lines allowed before function docstring
    "D202",  # No blank lines allowed after function docstring
    "D211",  # No blank lines allowed before class docstring
    "E501",  # Docstring line lengths
    # TODO: We should enable more of the pydocstyle lints!
    "S102",  # use of `exec` builtin
    "S307",  # Suspicious `eval` usage
    "I",     # isort rules
    "UP",    # pyupgrade rules
]

[tool.ruff.lint.isort]
known-local-folder = ["confutils","refstyle"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]
